# cmake-test

./: CMakeLists.txt  how-to.txt  main.cpp
src/: main.cpp
